fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -137,13 +137,13 @@ nav ul{
 }
 
 nav li{
-    width: 350px;
+    width: 380px;
     height: 20px;
     background-color: var(--white);
     font-size: 1.15em;
     font-weight: bold;
-    margin: 5px auto;   
-    padding: 10px;
+    margin: 10px auto;   
+    padding: 15px;
 }
 
 nav li:hover{
@@ -176,7 +176,7 @@ h4{
 
 img{
     display: block;
-    width: 65px;
+    width: 70px;
     position: relative;
     left: 10px;
     padding: 10px;
@@ -305,40 +305,41 @@ h4{
     display: grid;
     grid-template-columns: auto auto;
     grid-template-rows: auto auto;
-    padding: 10px;
+    padding: 5px;
     margin: 5px auto;
 }
 
 #why-us li{
-    padding: 15px;
+    padding: 25px;
     margin: 5px;
+    height: 40px;
     font-weight: bold;
 }
 
 #why-us ul li:nth-child(1){
     background-color: var(--teal);
-    width: 150px;
+    width: 140px;
     text-align: center;
     border-radius: 10px;
 }
 
 #why-us ul li:nth-child(2){
     background-color: var(--lavender);
-    width: 150px;
+    width: 140px;
     text-align: center;
     border-radius: 10px;
 }
 
 #why-us ul li:nth-child(3){
     background-color: var(--yellow);
-    width: 150px;
+    width: 140px;
     text-align: center;
     border-radius: 10px;
 }
 
 #why-us ul li:nth-child(4){
     background-color: var(--white);
-    width: 150px;
+    width: 140px;
     text-align: center;
     border-radius: 10px;
 }
